[package]
name = "awsp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "2.1.0"
dialoguer = "0.11.0"
dirs = "6.0.0"
log = "0.4.25"
regex = "1.11.1"
rusoto_credential = "0.48.0"
structopt = "0.3.26"
sysinfo = "0.33.1"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
